# aurora-parser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLOSURE.md  pyproject.toml  readme.md  requirements.txt
.github/workflows/: release.yml
src/: main.py  utils.py
src/app/: db.py  export.py  logger.py
src/ui/: cli.py  gui.mockup  gui.py
tests/: conftest.py  test_cli.py  test_db.py  test_export.py  test_logger.py  test_main.py
