[tool.poetry]
name = "aurora-parser"
version = "0.5.0"
description = "A CLI tool for extracting and exporting event logs from the Aurora 4X game database."
authors = ["Christian Trenthem <developers@hostright.info>"]
license = "Polyform Restricted"
readme = "README.md"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.0"
sqlalchemy = "^2.0"
prompt_toolkit = "^3.0"
openpyxl = "^3.1.5"
pyqt6 = "^6.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
pytest-mock = "^3.14"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
